style(agent): 简化会话卡片构建代码以减少条件重复